fix circle spacing and make them clickable

--- a/src/app/components/shared/modal/modal.component.scss
+++ b/src/app/components/shared/modal/modal.component.scss
@@ -66,6 +66,7 @@
 
 .image-position-circle {
   stroke: #ffffff;
+  cursor: pointer;
 }
 
 .image-position-circle.current {
